# test-files

./: README.me  pom.xml
hello-libs/: local.properties
hello-libs/app/: app-release.apk  build.gradle
hello-libs/app/src/main/cpp/: CMakeLists.txt  hello-libs.cpp  hello-libs.h
hello-libs/app/src/main/java/com/example/hellolibs/: MainActivity.java  ParallaxedView.java  SlidingTabLayout.java  SlidingTabStrip.java
hello-libs/distribution/openssl/include/openssl/: engine.h
